--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
-  "extends": "@tsconfig/node16/tsconfig.json",
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Node 16",
-
   "compilerOptions": {
-    "lib": ["es2021"],
-    "module": "ES2015",
-    "target": "es2021",
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
+    "target": "esnext",
+    "lib": ["esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "inlineSourceMap": true,
+    "inlineSources": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node"
+    "noImplicitAny": false,
+    "skipLibCheck": true,
+    "allowJs": false
   },
-
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
